tests/__snapshots__/api-toAcceptProps-function-components-stderr.snap.txt
Error: Component accepts props of the given type.

  26 |   test("accepts props of the given type", () => {
  27 |     expect(None).type.toAcceptProps({});
  28 |     expect(None).type.not.toAcceptProps({}); // fail
     |                           ~~~~~~~~~~~~~
  29 | 
  30 |     expect(First).type.toAcceptProps({});
  31 |     expect(First).type.not.toAcceptProps({}); // fail

       at ./__typetests__/function-components.tst.tsx:28:27 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  29 | 
  30 |     expect(First).type.toAcceptProps({});
  31 |     expect(First).type.not.toAcceptProps({}); // fail
     |                            ~~~~~~~~~~~~~
  32 | 
  33 |     expect(First).type.toAcceptProps({ one: "sample" });
  34 |     expect(First).type.not.toAcceptProps({ one: "sample" }); // fail

       at ./__typetests__/function-components.tst.tsx:31:28 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  32 | 
  33 |     expect(First).type.toAcceptProps({ one: "sample" });
  34 |     expect(First).type.not.toAcceptProps({ one: "sample" }); // fail
     |                            ~~~~~~~~~~~~~
  35 | 
  36 |     expect(Second).type.toAcceptProps({ one: "sample" });
  37 |     expect(Second).type.not.toAcceptProps({ one: "sample" }); // fail

       at ./__typetests__/function-components.tst.tsx:34:28 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  35 | 
  36 |     expect(Second).type.toAcceptProps({ one: "sample" });
  37 |     expect(Second).type.not.toAcceptProps({ one: "sample" }); // fail
     |                             ~~~~~~~~~~~~~
  38 | 
  39 |     const oneProp = { one: "sample" };
  40 |     expect(Second).type.toAcceptProps({ ...oneProp });

       at ./__typetests__/function-components.tst.tsx:37:29 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  39 |     const oneProp = { one: "sample" };
  40 |     expect(Second).type.toAcceptProps({ ...oneProp });
  41 |     expect(Second).type.not.toAcceptProps({ ...oneProp }); // fail
     |                             ~~~~~~~~~~~~~
  42 | 
  43 |     expect(Second).type.toAcceptProps({ one: "sample", two: true });
  44 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: true }); // fail

       at ./__typetests__/function-components.tst.tsx:41:29 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  42 | 
  43 |     expect(Second).type.toAcceptProps({ one: "sample", two: true });
  44 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: true }); // fail
     |                             ~~~~~~~~~~~~~
  45 | 
  46 |     const twoProps = { one: "sample", two: true };
  47 |     expect(Second).type.toAcceptProps({ ...twoProps });

       at ./__typetests__/function-components.tst.tsx:44:29 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  46 |     const twoProps = { one: "sample", two: true };
  47 |     expect(Second).type.toAcceptProps({ ...twoProps });
  48 |     expect(Second).type.not.toAcceptProps({ ...twoProps }); // fail
     |                             ~~~~~~~~~~~~~
  49 |   });
  50 | 
  51 |   test("does not accept props of the given type", () => {

       at ./__typetests__/function-components.tst.tsx:48:29 ❭ when source is a function component ❭ accepts props of the given type

Error: Component does not accept props of the given type.

Type '{ one: string; }' is not assignable to type 'IntrinsicAttributes'.
Property 'one' does not exist on type 'IntrinsicAttributes'.

  51 |   test("does not accept props of the given type", () => {
  52 |     expect(None).type.not.toAcceptProps({ one: "sample" });
  53 |     expect(None).type.toAcceptProps({ one: "sample" }); // fail: Property 'one' does not exist
     |                                       ~~~
  54 | 
  55 |     expect(First).type.not.toAcceptProps({ one: 1 });
  56 |     expect(First).type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable

       at ./__typetests__/function-components.tst.tsx:53:39 ❭ when source is a function component ❭ does not accept props of the given type

Error: Component does not accept props of the given type.

Type 'number' is not assignable to type 'string'.

  54 | 
  55 |     expect(First).type.not.toAcceptProps({ one: 1 });
  56 |     expect(First).type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable
     |                                        ~~~
  57 | 
  58 |     expect(First).type.not.toAcceptProps({ two: false });
  59 |     expect(First).type.toAcceptProps({ two: false }); // fail: Property 'two' does not exist

       at ./__typetests__/function-components.tst.tsx:56:40 ❭ when source is a function component ❭ does not accept props of the given type

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & FirstProps' ts(6500)

      3 | 
      4 | interface FirstProps {
      5 |   one?: string;
        |   ~~~
      6 | }
      7 | 
      8 | interface SecondProps {

          at ./__typetests__/function-components.tst.tsx:5:3

Error: Component does not accept props of the given type.

Type '{ two: boolean; }' is not assignable to type 'IntrinsicAttributes & FirstProps'.
Property 'two' does not exist on type 'IntrinsicAttributes & FirstProps'.

  57 | 
  58 |     expect(First).type.not.toAcceptProps({ two: false });
  59 |     expect(First).type.toAcceptProps({ two: false }); // fail: Property 'two' does not exist
     |                                        ~~~
  60 | 
  61 |     expect(First).type.not.toAcceptProps({ one: "sample", two: false });
  62 |     expect(First).type.toAcceptProps({ one: "sample", two: false }); // fail: Property 'two' does not exist

       at ./__typetests__/function-components.tst.tsx:59:40 ❭ when source is a function component ❭ does not accept props of the given type

Error: Component does not accept props of the given type.

Type '{ one: string; two: boolean; }' is not assignable to type 'IntrinsicAttributes & FirstProps'.
Property 'two' does not exist on type 'IntrinsicAttributes & FirstProps'.

  60 | 
  61 |     expect(First).type.not.toAcceptProps({ one: "sample", two: false });
  62 |     expect(First).type.toAcceptProps({ one: "sample", two: false }); // fail: Property 'two' does not exist
     |                                                       ~~~
  63 | 
  64 |     expect(Second).type.not.toAcceptProps({});
  65 |     expect(Second).type.toAcceptProps({}); // fail: Property 'one' is missing

       at ./__typetests__/function-components.tst.tsx:62:55 ❭ when source is a function component ❭ does not accept props of the given type

Error: Component does not accept props of the given type.

Property 'one' is missing in type '{}' but required in type 'SecondProps'.

  63 | 
  64 |     expect(Second).type.not.toAcceptProps({});
  65 |     expect(Second).type.toAcceptProps({}); // fail: Property 'one' is missing
     |                         ~~~~~~~~~~~~~
  66 | 
  67 |     expect(Second).type.not.toAcceptProps({ one: 1 });
  68 |     expect(Second).type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable

       at ./__typetests__/function-components.tst.tsx:65:25 ❭ when source is a function component ❭ does not accept props of the given type

    'one' is declared here. ts(2728)

       7 | 
       8 | interface SecondProps {
       9 |   one: string | undefined;
         |   ~~~
      10 |   two?: boolean;
      11 | }
      12 | 

           at ./__typetests__/function-components.tst.tsx:9:3

Error: Component does not accept props of the given type.

Type 'number' is not assignable to type 'string'.

  66 | 
  67 |     expect(Second).type.not.toAcceptProps({ one: 1 });
  68 |     expect(Second).type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable
     |                                         ~~~
  69 | 
  70 |     const oneProp = { one: 1 };
  71 |     expect(Second).type.not.toAcceptProps({ ...oneProp });

       at ./__typetests__/function-components.tst.tsx:68:41 ❭ when source is a function component ❭ does not accept props of the given type

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & SecondProps' ts(6500)

       7 | 
       8 | interface SecondProps {
       9 |   one: string | undefined;
         |   ~~~
      10 |   two?: boolean;
      11 | }
      12 | 

           at ./__typetests__/function-components.tst.tsx:9:3

Error: Component does not accept props of the given type.

Type '{ one: number; }' is not assignable to type 'SecondProps'.
Types of property 'one' are incompatible.
Type 'number' is not assignable to type 'string'.

  70 |     const oneProp = { one: 1 };
  71 |     expect(Second).type.not.toAcceptProps({ ...oneProp });
  72 |     expect(Second).type.toAcceptProps({ ...oneProp }); // fail: Type 'number' is not assignable
     |                         ~~~~~~~~~~~~~
  73 | 
  74 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: 2 });
  75 |     expect(Second).type.toAcceptProps({ one: "sample", two: 2 }); // fail: Type 'number' is not assignable

       at ./__typetests__/function-components.tst.tsx:72:25 ❭ when source is a function component ❭ does not accept props of the given type

Error: Component does not accept props of the given type.

Type 'number' is not assignable to type 'boolean | undefined'.

  73 | 
  74 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: 2 });
  75 |     expect(Second).type.toAcceptProps({ one: "sample", two: 2 }); // fail: Type 'number' is not assignable
     |                                                        ~~~
  76 | 
  77 |     const twoProps = { one: "sample", two: 2 };
  78 |     expect(Second).type.not.toAcceptProps({ ...twoProps });

       at ./__typetests__/function-components.tst.tsx:75:56 ❭ when source is a function component ❭ does not accept props of the given type

    The expected type comes from property 'two' which is declared here on type 'IntrinsicAttributes & SecondProps' ts(6500)

       8 | interface SecondProps {
       9 |   one: string | undefined;
      10 |   two?: boolean;
         |   ~~~
      11 | }
      12 | 
      13 | describe("when source is a function component", () => {

           at ./__typetests__/function-components.tst.tsx:10:3

Error: Component does not accept props of the given type.

Type '{ one: string; two: number; }' is not assignable to type 'SecondProps'.
Types of property 'two' are incompatible.
Type 'number' is not assignable to type 'boolean | undefined'.

  77 |     const twoProps = { one: "sample", two: 2 };
  78 |     expect(Second).type.not.toAcceptProps({ ...twoProps });
  79 |     expect(Second).type.toAcceptProps({ ...twoProps }); // fail: Type 'number' is not assignable
     |                         ~~~~~~~~~~~~~
  80 | 
  81 |     expect(Second).type.not.toAcceptProps({ two: true });
  82 |     expect(Second).type.toAcceptProps({ two: true }); // fail: Property 'one' is missing

       at ./__typetests__/function-components.tst.tsx:79:25 ❭ when source is a function component ❭ does not accept props of the given type

Error: Component does not accept props of the given type.

Property 'one' is missing in type '{ two: true; }' but required in type 'SecondProps'.

  80 | 
  81 |     expect(Second).type.not.toAcceptProps({ two: true });
  82 |     expect(Second).type.toAcceptProps({ two: true }); // fail: Property 'one' is missing
     |                         ~~~~~~~~~~~~~
  83 | 
  84 |     expect(Second).type.not.toAcceptProps({ three: 123 });
  85 |     expect(Second).type.toAcceptProps({ three: 123 }); // fail: Property 'three' does not exist

       at ./__typetests__/function-components.tst.tsx:82:25 ❭ when source is a function component ❭ does not accept props of the given type

    'one' is declared here. ts(2728)

       7 | 
       8 | interface SecondProps {
       9 |   one: string | undefined;
         |   ~~~
      10 |   two?: boolean;
      11 | }
      12 | 

           at ./__typetests__/function-components.tst.tsx:9:3

Error: Component does not accept props of the given type.

Type '{ three: number; }' is not assignable to type 'IntrinsicAttributes & SecondProps'.
Property 'three' does not exist on type 'IntrinsicAttributes & SecondProps'.

  83 | 
  84 |     expect(Second).type.not.toAcceptProps({ three: 123 });
  85 |     expect(Second).type.toAcceptProps({ three: 123 }); // fail: Property 'three' does not exist
     |                                         ~~~~~
  86 | 
  87 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  88 |     expect(Second).type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail: Property 'three' does not exist

       at ./__typetests__/function-components.tst.tsx:85:41 ❭ when source is a function component ❭ does not accept props of the given type

Error: Component does not accept props of the given type.

Type '{ one: string; two: true; three: number; }' is not assignable to type 'IntrinsicAttributes & SecondProps'.
Property 'three' does not exist on type 'IntrinsicAttributes & SecondProps'.

  86 | 
  87 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  88 |     expect(Second).type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail: Property 'three' does not exist
     |                                                                   ~~~~~
  89 |   });
  90 | });
  91 | 

       at ./__typetests__/function-components.tst.tsx:88:67 ❭ when source is a function component ❭ does not accept props of the given type

Error: Type accepts props of the given type.

   99 |   test("accepts props of the given type", () => {
  100 |     expect<None>().type.toAcceptProps({});
  101 |     expect<None>().type.not.toAcceptProps({}); // fail
      |                             ~~~~~~~~~~~~~
  102 | 
  103 |     expect<First>().type.toAcceptProps({});
  104 |     expect<First>().type.not.toAcceptProps({}); // fail

        at ./__typetests__/function-components.tst.tsx:101:29 ❭ when source is a type ❭ accepts props of the given type

Error: Type accepts props of the given type.

  102 | 
  103 |     expect<First>().type.toAcceptProps({});
  104 |     expect<First>().type.not.toAcceptProps({}); // fail
      |                              ~~~~~~~~~~~~~
  105 | 
  106 |     expect<First>().type.toAcceptProps({ one: "sample" });
  107 |     expect<First>().type.not.toAcceptProps({ one: "sample" }); // fail

        at ./__typetests__/function-components.tst.tsx:104:30 ❭ when source is a type ❭ accepts props of the given type

Error: Type accepts props of the given type.

  105 | 
  106 |     expect<First>().type.toAcceptProps({ one: "sample" });
  107 |     expect<First>().type.not.toAcceptProps({ one: "sample" }); // fail
      |                              ~~~~~~~~~~~~~
  108 | 
  109 |     expect<Second>().type.toAcceptProps({ one: "sample" });
  110 |     expect<Second>().type.not.toAcceptProps({ one: "sample" }); // fail

        at ./__typetests__/function-components.tst.tsx:107:30 ❭ when source is a type ❭ accepts props of the given type

Error: Type accepts props of the given type.

  108 | 
  109 |     expect<Second>().type.toAcceptProps({ one: "sample" });
  110 |     expect<Second>().type.not.toAcceptProps({ one: "sample" }); // fail
      |                               ~~~~~~~~~~~~~
  111 | 
  112 |     const oneProp = { one: "sample" };
  113 |     expect<Second>().type.toAcceptProps({ ...oneProp });

        at ./__typetests__/function-components.tst.tsx:110:31 ❭ when source is a type ❭ accepts props of the given type

Error: Type accepts props of the given type.

  112 |     const oneProp = { one: "sample" };
  113 |     expect<Second>().type.toAcceptProps({ ...oneProp });
  114 |     expect<Second>().type.not.toAcceptProps({ ...oneProp }); // fail
      |                               ~~~~~~~~~~~~~
  115 | 
  116 |     expect<Second>().type.toAcceptProps({ one: "sample", two: true });
  117 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: true }); // fail

        at ./__typetests__/function-components.tst.tsx:114:31 ❭ when source is a type ❭ accepts props of the given type

Error: Type accepts props of the given type.

  115 | 
  116 |     expect<Second>().type.toAcceptProps({ one: "sample", two: true });
  117 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: true }); // fail
      |                               ~~~~~~~~~~~~~
  118 | 
  119 |     const twoProps = { one: "sample", two: true };
  120 |     expect<Second>().type.toAcceptProps({ ...twoProps });

        at ./__typetests__/function-components.tst.tsx:117:31 ❭ when source is a type ❭ accepts props of the given type

Error: Type accepts props of the given type.

  119 |     const twoProps = { one: "sample", two: true };
  120 |     expect<Second>().type.toAcceptProps({ ...twoProps });
  121 |     expect<Second>().type.not.toAcceptProps({ ...twoProps }); // fail
      |                               ~~~~~~~~~~~~~
  122 |   });
  123 | 
  124 |   test("does not accept props of the given type", () => {

        at ./__typetests__/function-components.tst.tsx:121:31 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

Type '{ one: string; }' is not assignable to type 'IntrinsicAttributes'.
Property 'one' does not exist on type 'IntrinsicAttributes'.

  124 |   test("does not accept props of the given type", () => {
  125 |     expect<None>().type.not.toAcceptProps({ one: "sample" });
  126 |     expect<None>().type.toAcceptProps({ one: "sample" }); // fail: Property 'one' does not exist
      |                                         ~~~
  127 | 
  128 |     expect<First>().type.not.toAcceptProps({ one: 1 });
  129 |     expect<First>().type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable

        at ./__typetests__/function-components.tst.tsx:126:41 ❭ when source is a type ❭ does not accept props of the given type

Error: Type does not accept props of the given type.

Type 'number' is not assignable to type 'string'.

  127 | 
  128 |     expect<First>().type.not.toAcceptProps({ one: 1 });
  129 |     expect<First>().type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable
      |                                          ~~~
  130 | 
  131 |     expect<First>().type.not.toAcceptProps({ two: false });
  132 |     expect<First>().type.toAcceptProps({ two: false }); // fail: Property 'two' does not exist

        at ./__typetests__/function-components.tst.tsx:129:42 ❭ when source is a type ❭ does not accept props of the given type

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & FirstProps' ts(6500)

      3 | 
      4 | interface FirstProps {
      5 |   one?: string;
        |   ~~~
      6 | }
      7 | 
      8 | interface SecondProps {

          at ./__typetests__/function-components.tst.tsx:5:3

Error: Type does not accept props of the given type.

Type '{ two: boolean; }' is not assignable to type 'IntrinsicAttributes & FirstProps'.
Property 'two' does not exist on type 'IntrinsicAttributes & FirstProps'.

  130 | 
  131 |     expect<First>().type.not.toAcceptProps({ two: false });
  132 |     expect<First>().type.toAcceptProps({ two: false }); // fail: Property 'two' does not exist
      |                                          ~~~
  133 | 
  134 |     expect<First>().type.not.toAcceptProps({ one: "sample", two: false });
  135 |     expect<First>().type.toAcceptProps({ one: "sample", two: false }); // fail: Property 'two' does not exist

        at ./__typetests__/function-components.tst.tsx:132:42 ❭ when source is a type ❭ does not accept props of the given type

Error: Type does not accept props of the given type.

Type '{ one: string; two: boolean; }' is not assignable to type 'IntrinsicAttributes & FirstProps'.
Property 'two' does not exist on type 'IntrinsicAttributes & FirstProps'.

  133 | 
  134 |     expect<First>().type.not.toAcceptProps({ one: "sample", two: false });
  135 |     expect<First>().type.toAcceptProps({ one: "sample", two: false }); // fail: Property 'two' does not exist
      |                                                         ~~~
  136 | 
  137 |     expect<Second>().type.not.toAcceptProps({});
  138 |     expect<Second>().type.toAcceptProps({}); // fail: Property 'one' is missing

        at ./__typetests__/function-components.tst.tsx:135:57 ❭ when source is a type ❭ does not accept props of the given type

Error: Type does not accept props of the given type.

Property 'one' is missing in type '{}' but required in type 'SecondProps'.

  136 | 
  137 |     expect<Second>().type.not.toAcceptProps({});
  138 |     expect<Second>().type.toAcceptProps({}); // fail: Property 'one' is missing
      |                           ~~~~~~~~~~~~~
  139 | 
  140 |     expect<Second>().type.not.toAcceptProps({ one: 1 });
  141 |     expect<Second>().type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable

        at ./__typetests__/function-components.tst.tsx:138:27 ❭ when source is a type ❭ does not accept props of the given type

    'one' is declared here. ts(2728)

       7 | 
       8 | interface SecondProps {
       9 |   one: string | undefined;
         |   ~~~
      10 |   two?: boolean;
      11 | }
      12 | 

           at ./__typetests__/function-components.tst.tsx:9:3

Error: Type does not accept props of the given type.

Type 'number' is not assignable to type 'string'.

  139 | 
  140 |     expect<Second>().type.not.toAcceptProps({ one: 1 });
  141 |     expect<Second>().type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable
      |                                           ~~~
  142 | 
  143 |     const oneProp = { one: 1 };
  144 |     expect<Second>().type.not.toAcceptProps({ ...oneProp });

        at ./__typetests__/function-components.tst.tsx:141:43 ❭ when source is a type ❭ does not accept props of the given type

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & SecondProps' ts(6500)

       7 | 
       8 | interface SecondProps {
       9 |   one: string | undefined;
         |   ~~~
      10 |   two?: boolean;
      11 | }
      12 | 

           at ./__typetests__/function-components.tst.tsx:9:3

Error: Type does not accept props of the given type.

Type '{ one: number; }' is not assignable to type 'SecondProps'.
Types of property 'one' are incompatible.
Type 'number' is not assignable to type 'string'.

  143 |     const oneProp = { one: 1 };
  144 |     expect<Second>().type.not.toAcceptProps({ ...oneProp });
  145 |     expect<Second>().type.toAcceptProps({ ...oneProp }); // fail: Type 'number' is not assignable
      |                           ~~~~~~~~~~~~~
  146 | 
  147 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: 2 });
  148 |     expect<Second>().type.toAcceptProps({ one: "sample", two: 2 }); // fail: Type 'number' is not assignable

        at ./__typetests__/function-components.tst.tsx:145:27 ❭ when source is a type ❭ does not accept props of the given type

Error: Type does not accept props of the given type.

Type 'number' is not assignable to type 'boolean | undefined'.

  146 | 
  147 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: 2 });
  148 |     expect<Second>().type.toAcceptProps({ one: "sample", two: 2 }); // fail: Type 'number' is not assignable
      |                                                          ~~~
  149 | 
  150 |     const twoProps = { one: "sample", two: 2 };
  151 |     expect<Second>().type.not.toAcceptProps({ ...twoProps });

        at ./__typetests__/function-components.tst.tsx:148:58 ❭ when source is a type ❭ does not accept props of the given type

    The expected type comes from property 'two' which is declared here on type 'IntrinsicAttributes & SecondProps' ts(6500)

       8 | interface SecondProps {
       9 |   one: string | undefined;
      10 |   two?: boolean;
         |   ~~~
      11 | }
      12 | 
      13 | describe("when source is a function component", () => {

           at ./__typetests__/function-components.tst.tsx:10:3

Error: Type does not accept props of the given type.

Type '{ one: string; two: number; }' is not assignable to type 'SecondProps'.
Types of property 'two' are incompatible.
Type 'number' is not assignable to type 'boolean | undefined'.

  150 |     const twoProps = { one: "sample", two: 2 };
  151 |     expect<Second>().type.not.toAcceptProps({ ...twoProps });
  152 |     expect<Second>().type.toAcceptProps({ ...twoProps }); // fail: Type 'number' is not assignable
      |                           ~~~~~~~~~~~~~
  153 | 
  154 |     expect<Second>().type.not.toAcceptProps({ two: true });
  155 |     expect<Second>().type.toAcceptProps({ two: true }); // fail: Property 'one' is missing

        at ./__typetests__/function-components.tst.tsx:152:27 ❭ when source is a type ❭ does not accept props of the given type

Error: Type does not accept props of the given type.

Property 'one' is missing in type '{ two: true; }' but required in type 'SecondProps'.

  153 | 
  154 |     expect<Second>().type.not.toAcceptProps({ two: true });
  155 |     expect<Second>().type.toAcceptProps({ two: true }); // fail: Property 'one' is missing
      |                           ~~~~~~~~~~~~~
  156 | 
  157 |     expect<Second>().type.not.toAcceptProps({ three: 123 });
  158 |     expect<Second>().type.toAcceptProps({ three: 123 }); // fail: Property 'three' does not exist

        at ./__typetests__/function-components.tst.tsx:155:27 ❭ when source is a type ❭ does not accept props of the given type

    'one' is declared here. ts(2728)

       7 | 
       8 | interface SecondProps {
       9 |   one: string | undefined;
         |   ~~~
      10 |   two?: boolean;
      11 | }
      12 | 

           at ./__typetests__/function-components.tst.tsx:9:3

Error: Type does not accept props of the given type.

Type '{ three: number; }' is not assignable to type 'IntrinsicAttributes & SecondProps'.
Property 'three' does not exist on type 'IntrinsicAttributes & SecondProps'.

  156 | 
  157 |     expect<Second>().type.not.toAcceptProps({ three: 123 });
  158 |     expect<Second>().type.toAcceptProps({ three: 123 }); // fail: Property 'three' does not exist
      |                                           ~~~~~
  159 | 
  160 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  161 |     expect<Second>().type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail: Property 'three' does not exist

        at ./__typetests__/function-components.tst.tsx:158:43 ❭ when source is a type ❭ does not accept props of the given type

Error: Type does not accept props of the given type.

Type '{ one: string; two: true; three: number; }' is not assignable to type 'IntrinsicAttributes & SecondProps'.
Property 'three' does not exist on type 'IntrinsicAttributes & SecondProps'.

  159 | 
  160 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  161 |     expect<Second>().type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail: Property 'three' does not exist
      |                                                                     ~~~~~
  162 |   });
  163 | });
  164 | 

        at ./__typetests__/function-components.tst.tsx:161:69 ❭ when source is a type ❭ does not accept props of the given type

